--- a/eng/catalogues.html
+++ b/eng/catalogues.html
@@ -129,7 +129,7 @@
                                         </ul>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./catalogues.html">Catalogues</a>
+                                        <a class="header_nav_drop_link" href="./catalogues.html">Catalogs</a>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./video.html">Video</a>
@@ -239,13 +239,13 @@
         <div class="page-banner page-banner-catalogues">
             <div class="page-banner_mask"></div>
             <img class="page-banner_style" src="../public/img/innerPage-style.png" alt="">
-            <h1 data-aos="fade-down" data-aos-duration="800">Catalogues</h1>
+            <h1 data-aos="fade-down" data-aos-duration="800">Catalogs</h1>
         </div>
         <nav aria-label="breadcrumb" class="container">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
               <li class="breadcrumb-item">Media</li>
-              <li class="breadcrumb-item active" aria-current="page">Catalogues</li>
+              <li class="breadcrumb-item active" aria-current="page">Catalogs</li>
             </ol>
         </nav>
         
