--- a/eng/introduction.html
+++ b/eng/introduction.html
@@ -129,7 +129,7 @@
                                         </ul>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./catalogues.html">Catalogues</a>
+                                        <a class="header_nav_drop_link" href="./catalogues.html">Catalogs</a>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./video.html">Video</a>
@@ -305,7 +305,7 @@
             </div>
         </div>
 
-        <div class="about_eh">
+        <!-- <div class="about_eh">
             <div class="container">
                 <div class="about_equip">
                     <div class="about_content_pic">
@@ -327,7 +327,48 @@ Recently, we have do the R&D on NC tool grinder and CNC Tool Grinder which are d
                     </div>
                 </div>
             </div>
+        </div> -->
+
+        <div class="about_eh-new">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="about_eh_pic">
+                            <img src="../public/img/about-3.png" alt="">
+                            <div class="about_eh_equipTitle" data-aos="fade-up" data-aos-duration="800">Equipment</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 d-lg-block d-none">
+                        <div class="about_eh_pic ms-auto">
+                            <img src="../public/img/about-4.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about_eh_historyTitle d-lg-block d-none">
+                <p class="intro_content" data-aos="fade-down" data-aos-duration="800">
+                    PEIPING PRECISION has been dedicated to the research and improvement in tool and cutter grinding field for 40 years. PEIPING PRECISION had gotten the medal and related patents.<br>
+                    From single function drill grinder to universal tool & cutter grinder, we believe our product could be multi-functional and help our customers to increase efficiency.<br>
+                    Recently, we have do the R&D on NC tool grinder and CNC Tool Grinder which are designed for the users of the special tool & cutter mass production.
+                </p>
+            </div>
+            <div class="container d-lg-none">
+                <div class="about_content_item">
+                    <div class="about_content_pic">
+                        <img src="../public/img/about-4.png" alt="">
+                    </div>
+                    <div class="about_content_text">
+                        <p class="intro_content" data-aos="fade-down" data-aos-duration="800">
+                            PEIPING PRECISION has been dedicated to the research and improvement in tool and cutter grinding field for 40 years. PEIPING PRECISION had gotten the medal and related patents.<br>
+                            From single function drill grinder to universal tool & cutter grinder, we believe our product could be multi-functional and help our customers to increase efficiency.<br>
+                            Recently, we have do the R&D on NC tool grinder and CNC Tool Grinder which are designed for the users of the special tool & cutter mass production.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        
 
         <div class="intro-global">
             <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">Global Marketing</h2>
