--- a/eng/product-content.html
+++ b/eng/product-content.html
@@ -141,7 +141,7 @@
                                         </ul>
                                     </li>
                                     <li class="header_nav_drop_item">
-                                        <a class="header_nav_drop_link" href="./catalogues.html">Catalogues</a>
+                                        <a class="header_nav_drop_link" href="./catalogues.html">Catalogs</a>
                                     </li>
                                     <li class="header_nav_drop_item">
                                         <a class="header_nav_drop_link" href="./video.html">Video</a>
