--- a/eng/introduction.html
+++ b/eng/introduction.html
@@ -247,40 +247,6 @@
               <li class="breadcrumb-item active" aria-current="page">About</li>
             </ol>
         </nav>
-        
-        <!-- <ul class="nav nav-tabs tab-common tab-about">
-            <li class="nav-item">
-              <a href="" class="nav-link active"><span>Introduction</span></a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link"><span>Equipment</span></a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link"><span>History</span></a>
-            </li>
-        </ul> -->
-
-        <!-- <div class="company">
-            <div class="company_inner">
-                <img class="company_style" src="../public/img/CompanyProfile-style.png" alt="">
-                <img class="company_pic d-lg-block d-none" data-aos="fade-right" data-aos-duration="800" src="../public/img/companyPrifile-pic.png" alt="">
-                <img class="company_pic d-lg-none" data-aos="fade-right" data-aos-duration="800" src="../public/img/home-CompanyProfile.png" alt="">
-                <div class="company_text">
-                    <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">Company Profile</h2>
-                    <p class="intro_content" data-aos="fade-down" data-aos-duration="800">PEIPING Precision Enterprise Co., Ltd. was established in 1980 and has been dedicated to the research and improvement of tool and cutter grinder all the time. All of the products have passed the quality inspection precisely. In addition, PEIPING Precision Enterprise Co., Ltd. had gotten the Gold Medal winner at Geneva Invention and had many kinds of patents: No. 75717, 42447, 21204 etc. The quality of products is trustworthy by the customers.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="home-bussiness inner">
-            <img class="w-100 d-lg-none" src="../public/img/Business-bg-m.png" alt="">
-            <div class="home-bussiness_text">
-                <div class="home-bussiness_inner">
-                    <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">Business Philosophy</h2>
-                    <p class="intro_content" data-aos="fade-down" data-aos-duration="800">PEIPING upholds the business philosophy of “Sustainability, Growth and Excellence.” With changes in time, we have imported the advanced technology and developed the high technical products to meet the customers’ needs. At present, PEIPING is the main manufacturer of tool and cutter grinder in Taiwan. Especially, we are the only producer for big diameter drill grinder (Biggest grinding diameter: 100mm).</p>
-                </div>
-            </div>
-        </div> -->
 
         <div class="about_content">
             <div class="container">
@@ -305,31 +271,26 @@
             </div>
         </div>
 
-        <!-- <div class="about_eh">
+        <div class="about_rd">
             <div class="container">
-                <div class="about_equip">
-                    <div class="about_content_pic">
-                        <img src="../public/img/about-3.png" alt="">
-                    </div>
-                    <div class="about_equip_title" data-aos="fade-up" data-aos-duration="800">Equipment</div>
-                </div>
-                <div class="about_history">
-                    <div class="about_content_pic">
-                        <img src="../public/img/about-4.png" alt="">
-                    </div>
-                    <div class="about_history_text">
-                        <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">History</h2>
-                        <p class="intro_content" data-aos="fade-down" data-aos-duration="800">
-                            PEIPING PRECISION has been dedicated to the research and improvement in tool and cutter grinding field for 40 years. PEIPING PRECISION had gotten the medal and related patents.<br>
-From single function drill grinder to universal tool & cutter grinder, we believe our product could be multi-functional and help our customers to increase efficiency.<br>
-Recently, we have do the R&D on NC tool grinder and CNC Tool Grinder which are designed for the users of the special tool & cutter mass production.
-                        </p>
+                <div class="about_rd_content">
+                    <h2 class="title-home" data-aos="fade-up" data-aos-duration="800">R&D</h2>
+                    <p class="intro_content" data-aos="fade-down" data-aos-duration="800">
+                        PEIPING PRECISION has been dedicated to the research and improvement in tool and cutter grinding field for 40 years. PEIPING PRECISION had gotten the medal and related patents.<br>
+                        From single function drill grinder to universal tool & cutter grinder, we believe our product could be multi-functional and help our customers to increase efficiency.<br>
+                        Recently, we have do the R&D on NC tool grinder and CNC Tool Grinder which are designed for the users of the special tool & cutter mass production.
+                    </p>
+                    <div class="about_rd_pic">
+                        <img class="cert" src="../public/img/about-3.png" alt="">
+                        <img class="duns" src="../public/img/about-5.png" alt="">
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
-        <div class="about_eh-new">
+
+
+        <!-- <div class="about_eh-new">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -366,7 +327,7 @@ Recently, we have do the R&D on NC tool grinder and CNC Tool Grinder which are d
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         
 
