--- a/eng/video.html
+++ b/eng/video.html
@@ -434,7 +434,7 @@
         </div>
       </div>
 
-      <div class="modal fade loginPopup" id="SignupPopup" tabindex="-1" aria-labelledby="loginPopupLabel" aria-hidden="true">
+      <!-- <div class="modal fade loginPopup" id="SignupPopup" tabindex="-1" aria-labelledby="loginPopupLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-body">
@@ -469,7 +469,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
     <script src="../public/js/jquery/jquery.min.js"></script>
     <script src="../public/js/bootstrap/bootstrap.bundle.min.js"></script>
