--- a/eng/video.html
+++ b/eng/video.html
@@ -409,7 +409,7 @@
           <div class="modal-content">
             <div class="modal-body">
               <div class="loginPopup_main">
-                <h4>Login to <br><span>view catalog</span></h4>
+                <h4>Login to <br><span>view video</span></h4>
                 <form class="" action="">
                     <div class="login_input login_password">
                         <div class="login_input_icon"><img src="../public/img/icon-password.svg" alt=""></div>
