--- a/eng/news-content.html
+++ b/eng/news-content.html
@@ -262,7 +262,7 @@
                     <p class="news_detail_content">
                         Booth No.: Hall 1,<br>
                         Date: November 4-7<br>
-                        Venue: SECC-Saigon Exhibition and Convention Center
+                        Venue: SECC-Saigon Exhibition and <a href="">Convention Center</a>
                     </p>
                     <div class="detail_pageBtn mt-5 d-flex justify-content-end">
                         <a class="prev ms-0" href="./news-content.html">
